
Change List For v1.0.1 (Codename: Tranquility / Bloat Factor: 4567 lines / Status: Shipped)
-------------------------------------------------------------------------------------------
* Cleanup: Changed batch and list modes to not throw ERRORs when a non-existant server group is specified.
           This makes it easier to maintain shared code across environments of varied size.
* Added pingtcp.py script, a very handy tool for checking whether servers are alive...or not.
* Added sniper.py script, a very handy tool for selectively killing processes in a mission critical environment.

Change List For v1.1.0 (Codename: Optimator / Status: Not Started)
------------------------------------------------------------------
- Stable ability to use a new run command keyword: "threads".
  This will run the given command in background processes in parallel.
  Output will be spooled to one file per server in a standard output directory.
- Ability to use a "set concurrency X" command to set the concurrency
  for parallel run.  Also XML config directives for global defaults.

Change List For v1.2.0 (Codename: Status / Status: Not Started)
---------------------------------------------------------------
? Ability to have "pluggable" transports whereby one can at least use the "copy" and "run" commands
  via rsh, ssh, SSL, multicast, etc.  Will most likely use command-line as interface.

Small Feature TODO
------------------
- Server groups of server groups.
- Cleanup: Provide a larger set of example files.  Double-check doc.  Test like crazy.
- Ability to have batch mode report back with names of servers down and how many during a given run.
- Ability to run multiple commands using typical shell-style semicolon delimiter.

Large Feature TODO
------------------
- Ability to use "set password", along with password echo with or without remote sudo functionality.
- Ability to list servers who run a particular service.  Config file tags, etc.